sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: Unmatched closing brace '}' ignored here
      }}
      ^AlgInsertionSort:25: error: Unmatched closing brace '}' ignored here
}
^