sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n: Int=getNombreValeurs()-1
  for (i<- 1 to n-1){
    var v: Int=getValeur(i)
    var pos: Int=0
    var j: Int=0
    while (plusPetitQue(j,v)){
      pos+=1
      j+=1
      
    }
      }}
    var vali: Int=getValeur(pos)
    for (j<- pos to i ){
      setValeur(j,vali)
      vali=getValeur(j+1)
    }
    
    
  }
}